criando o primeiro exemplo de js

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     
+
+    <!-- sempre antes de fechar o body -->
+    <!-- sem o ./src/js/, ele nao vai ler o arquivo dentro da pasta -->
+    <!-- CHAMANDO O JAVASCRIPT EXTERNO -->
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
